--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "rxjs": "5.4.1",
     "typescript": "2.3.4",
     "zone.js": "0.8.12"
+  },
+  "peerDependencies": {
+    "@angular/animations": "~4.1.3"
   }
 }
