--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "zone.js": "~0.8.17"
   },
   "peerDependencies": {
-    "@angular/animations": "~4.1.3"
+    "@angular/animations": "^4.1.3"
   }
 }
